# SpaceShooterSFML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SpaceShooterSFML  build_windows.bat  vcpkg.json
src/: Asteroid.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  background.cpp  background.h  chunk.cpp  chunk.h  main.cpp  playerTexture.h
